# pymediaparser

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/design/: simple-sampler优化_260411.md  smart-sampler-preprocess-design.md  vlm-temporal-frame-input.md
scripts/: run_parser.py
src/pymediaparser/: __init__.py  frame_buffer.py  live_pipeline.py  replay_pipeline.py  vlm_base.py
src/pymediaparser/smart_sampler/: __init__.py  base.py  configs.py  fast_triggers.py  frame_validator.py  meaningful_activity_detector.py  ml_smart_sampler.py  scene_transition_tracker.py  simple_smart_sampler.py  static_filter.py
src/pymediaparser/vlm/: _local_base.py  bmp.py  configs.py  factory.py  openai_api.py  qwen2.py  qwen3.py  qwen35.py
tests/: test_comprehensive.py  test_frame_buffer.py  test_ml_smart_sampler.py  test_replay_pipeline.py  test_vlm_openai_api.py
tests/vlm_test/: test_bmp_backend.py
